# russian-for-dummies

./: .gitignore  Cargo.toml  README.md  tts.py
cache/nouns/: 100.json  10770.json  10845.json  10981.json  11111.json  12092.json  12175.json  12834.json  12870.json  12953.json  132.json  1355.json  13710.json  1390.json  157.json  1579.json  1662.json  17111.json  1717.json  17379.json  1830.json  20545.json  20785.json  217.json  22711.json  22980.json  2333.json  2471.json  26810.json  2754.json  2839.json  2975.json  334.json  34.json  36651.json  4054.json  4080.json  40850.json  4629.json  47793.json  (+25 more)
cache/others/: 101_0.json  103_0.json  108_0.json  10_0.json  10_1.json  10_2.json  13_0.json  154_0.json  1_0.json  1_1.json  20_0.json  20_1.json  20_3.json  2197_0.json  21_0.json  234_0.json  270_0.json  3077_0.json  3174_0.json  32405_0.json  33002_0.json  3390_0.json  36_0.json  39_0.json  39_1.json  3_0.json  48_0.json  52416_0.json  532_0.json  54_0.json  59737_0.json  59757_0.json  59774_0.json  59_0.json  59_1.json  615_0.json  69_0.json  7411_0.json  769_0.json  77_0.json  (+6 more)
cache/pronouns/: 15.json  18.json  22.json  243.json  25.json  288.json  4.json  46.json  6.json  65.json  7.json
cache/verbs/: 109.json  117.json  139.json  1495.json  193.json  32.json  53.json  573.json  721.json  90.json
src/: main.rs  tts.rs
src/content/: a1.rs  cache.rs  fruits.rs  mod.rs  russian_for_dummies.rs  vegetables.rs
src/genanki/: compile_anki_deck.rs  mod.rs  sync.rs
src/model/: category.rs  csfr.rs  deck.rs  declension.rs  declension_type.rs  flash_card.rs  (+10 more)
(+19 files in other folders)
